...
                let currentBestResult = "Рекорд: \(statisticService.bestGame.correct)/\(statisticService.bestGame.total) (\(statisticService.bestGame.date.dateTimeString))\n"
                let avarageAccurancy = "Средняя точность: \(String(format: "%.2f", (statisticService.totalAccuracy) * 100.0))%"
                
                let resultString = currentResult + currentQuantityOfQuizes + currentBestResult + avarageAccurancy
                
                guard let viewController = viewController else { return }
                let alertModel: AlertModel = AlertModel(title: "Этот раунд окончен!",
                                                        message: resultString,
                                                        buttonText: "Сыграть еще раз",
                                                        completion: restartGame)
                
                viewController.show(quiz: alertModel)
            }
...
